--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chart.js": "^3.1.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "readable-stream": "^2.3.7",
+    "recharts": "^2.0.9",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
