--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^7.0.3",
     "readable-stream": "^2.3.7",
     "recharts": "^2.0.9",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
