chore: improved add snippet and login on admin side, basic integration of code snippets with user side

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 PORT=4000
-MONGO_URI="mongodb://localhost:27017/typro"
+MONGO_URI="mongodb+srv://rohit:HzJpFLaX5Q8rGL52@cluster0.vry4c.mongodb.net/typro?retryWrites=true&w=majority"
 KEY="85c8e2c0e2f30f74cb169dc9aa8d0ab8"
+ADMIN_KEY="thisissupersecretadminkey"
