--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "chart.js": "^3.1.0",
     "concurrently": "^6.0.2",
+    "msw": "^0.28.2",
     "nanoid": "^3.1.22",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
